# ProjetoONE-RamonRodrigo

./: db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
pages/: views.py
templates/: base.html  home.html
