[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
django-allauth = "^0.44.0"
django-crispy-forms = "^1.12.0"
pandas = "^1.2.5"
[tool.poetry.dev-dependencies]
